# app-suscriptions-back

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  INTEGRATION_REVIEW.md  VALIDATION_REPORT.md  docker-compose.yml  moabits.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run.txt  stop.sh
app/: config.py  database.py  dependencies.py  main.py
app/identity/: auth_utils.py  dependencies.py  email_validation.py
app/identity/models/: profile.py  refresh_token.py  user.py
app/identity/routers/: auth.py  me.py  users.py
app/identity/schemas/: profile.py  user.py
app/models/: company.py  company_settings.py  profile.py
app/providers/: adapter_base.py  base.py  registry.py  routers.py  schemas.py
app/providers/kite/: adapter.py  client.py  dto.py  mappers.py  status_map.py
app/providers/kite/wsdl/: UNICA_API_SOAP_Globalm2m_echo_services_v1_0.wsdl  UNICA_API_SOAP_Globalm2m_echo_types_v1_0.xsd  UNICA_API_SOAP_Globalm2m_endcustomer_services_v2_0.wsdl  UNICA_API_SOAP_Globalm2m_endcustomer_types_v2_0.xsd  UNICA_API_SOAP_Globalm2m_inventory_services_v12_0.wsdl  UNICA_API_SOAP_Globalm2m_inventory_types_v12_0.xsd  UNICA_API_SOAP_Globalm2m_reports_services_v1_16.wsdl  UNICA_API_SOAP_Globalm2m_reports_types_v1_16.xsd  UNICA_API_SOAP_Globalm2m_types_v1_1.xsd  UNICA_API_SOAP_Globalm2m_types_v1_2.xsd  UNICA_API_SOAP_Globalm2m_types_v2_0.xsd  UNICA_API_SOAP_Globalm2m_user_services_v3_0.wsdl  UNICA_API_SOAP_Globalm2m_user_types_v3_0.xsd  UNICA_API_SOAP_common_faults_v1_1.wsdl  UNICA_API_SOAP_common_types_v1_0.xsd  UNICA_API_SOAP_common_types_v1_1.xsd  UNICA_API_SOAP_common_types_v1_2.xsd  UNICA_API_SOAP_common_types_v2_0.xsd  UNICA_API_SOAP_common_types_v2_1.xsd  readme.txt
app/providers/moabits/: adapter.py  dto.py  status_map.py
app/providers/tele2/: adapter.py  dto.py  status_map.py
app/routers/: auth.py  companies.py  me.py  users.py
app/schemas/: company.py  profile.py  user.py
app/shared/: crypto.py  errors.py  logging.py  middleware.py  resilience.py
app/subscriptions/: domain.py
app/subscriptions/models/: lifecycle_audit.py  routing.py
app/subscriptions/routers/: sims.py
app/subscriptions/schemas/: sim.py
app/subscriptions/services/: credentials.py  cursors.py  filters.py  idempotency.py  listing.py  normalization.py  provider_dispatch.py  routing.py  stats.py
app/sync/: models.py  queue.py  router.py  schemas.py  tasks.py  worker.py
app/tenancy/: company_validation.py  credential_expiry.py
app/tenancy/models/: company.py  company_settings.py  credentials.py  idempotency.py  moabits_source_company.py  provider_mapping.py  provider_source_config.py
app/tenancy/routers/: companies.py  credentials.py
app/tenancy/schemas/: company.py  credentials.py
docs/: CIRCUIT_BREAKER_IMPLEMENTATION.md  FRONTEND_BACKEND_CONTRACT.md  GAPS_AND_RISKS.md  LIFECYCLE_FLAG.md
docs/architecture/: ARCHITECTURE.md  DOCS_CODE_ALIGNMENT_AUDIT.md  KITE_WSDL_CAPABILITIES.md  MOABITS_ORION_GATEWAY_API_V2.md  MOABITS_ORION_V1_NOTES.md  PROVIDER_SPEC_GAPS.md  _context_state.json  _phase7_consistency_check.md  arch-analysis.md  c4-component.mermaid  c4-container.mermaid  c4-context.mermaid  context-map.mermaid  domain-model.md  nfr-analysis.md  patterns-decisions.md
docs/architecture/adrs/: ADR-001-modular-monolith.md  ADR-002-real-time-proxy-no-canonical-store.md  ADR-003-acl-provider-adapter.md  ADR-004-error-model.md  ADR-005-resilience-and-cache.md  ADR-006-encrypted-credentials-table.md  ADR-007-api-versioning-and-pagination.md  ADR-008-auth-rbac-audit.md  ADR-009-testing-strategy.md  ADR-010-moabits-explicit-company-codes-bootstrap.md  ADR-011-moabits-v2-list-enrichment.md  ADR-012-routing-sync-and-async-jobs.md  ADR-013-cross-tenant-admin-and-status-cache.md
docs/archive/2026-05-provider-remediation/: IMPLEMENTATION_PLAN.md  INTEGRATION_REVIEW.md  README.md  VALIDATION_REPORT.md
migrations/: 000_init.sql  001_sim_routing_map.sql  002_company_provider_credentials.sql  003_audit_log.sql  004_idempotency_keys.sql  005_lifecycle_change_audit.sql  006_moabits_source_companies.sql  006_provider_source_configs.sql  007_company_provider_mappings.sql  008_sync_jobs.sql  README.md
scripts/: kite_rate_probe.py  update_moabits_api_key.py
tests/: README.md  conftest.py  test_auth_router.py  test_companies_router.py  test_credentials_router.py  test_domain.py  test_main_errors.py  test_me_router.py  test_provider_capabilities.py  test_resilience.py  test_schemas.py  test_sims_router_controls.py  test_sync_router.py  test_users_router.py
tests/providers/: test_kite_adapter.py  test_kite_faults.py  test_kite_mappers.py  test_kite_writes.py  test_moabits_adapter.py  test_moabits_writes.py  test_provider_contract.py  test_tele2_adapter.py  test_tele2_status_map.py
